syntax = "proto3";

option csharp_namespace = "MySpace.Application.User";

package my_space;

message CreateUserRequest {
	int32  id =1;
	string FirstName=2;
	string LastName=3;
	string UserName=4;
	string Password=5;
}
message CreateUserResponse {
	int32  id =1;
	string FirstName=2;
	string LastName=3;
	string UserName=4;
	string Password=5;
	string created_at = 6;
}
message EditUserRequest {
	int32  id =1;
	string FirstName=2;
	string LastName=3;
	string UserName=4;
	string Password=5;
	string created_at = 6;
}
message EditUserResponse{
	int32  id =1;
	string FirstName=2;
	string LastName=3;
	string UserName=4;
	string Password=5;
	string CreatedAt =6;
}
message DeleteUserRequest {
	int32  id =1;
}
message DeleteUserResponse{
	bool   success = 1;
    string message = 2;
}
message GetUserByIdRequest{
	int32 id = 1;
}
message GetUserByIdResponse{
	int32  id =1;
	string FirstName=2;
	string LastName=3;
	string UserName=4;
}


message GetAllUsersRequest{
	
}
message GetAllUsersResponse{
	repeated GetUserByIdResponse User =1;
}

